Fix about Section image
Issue:  About section image  doesn't show on GitHub

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <div class="container">
         <div class="content">
           <div class="imge">
-            <img src="/imges/about.jpg" alt="">
+            <img src="imges/about.jpg" alt="">
           </div>
           <div class="text">
             <p class="first">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non, fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati, aut excepturi iusto laudantium!</p>
